--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -3,7 +3,11 @@
 {% load i18n %}
 {% load widget_tweaks %}
 
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block extra_title %}{% trans "Change Password" %}{% endblock %}
+
+{% block extra_meta %}
+    <meta name="description" content="Change the password on your Island Bees account.">
+{% endblock %}
 
 {% block inner_content %}
 
