--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -3,7 +3,11 @@
 {% load i18n %}
 {% load account %}
 
-{% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% block extra_title %}{% trans "Password Reset" %}{% endblock %}
+
+{% block extra_meta %}
+    <meta name="description" content="We have sent your an email for account verification.">
+{% endblock %}
 
 {% block inner_content %}
     <h1 class="font-title weight-bold section-title-lrg text-uppercase mb-2">{% trans "Password Reset" %}</h1>
