--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -3,7 +3,11 @@
 {% load i18n %}
 {% load widget_tweaks %}
 
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block extra_title %}{% trans "Change Password" %}{% endblock %}
+
+{% block extra_meta %}
+    <meta name="description" content="Reset your Island Bees account password.">
+{% endblock %}
 
 {% block inner_content %}
     <!-- Page Title -->
