--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -1,7 +1,11 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block extra_title %}{% trans "Change Password" %}{% endblock %}
+
+{% block extra_meta %}
+    <meta name="description" content="The password on your Island Bees account has been changed.">
+{% endblock %}
 
 {% block inner_content %}
     <h1 class="font-title weight-bold section-title-lrg text-uppercase mb-2">{% trans "Change Password" %}</h1>
