--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -2,7 +2,11 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
+{% block extra_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
+
+{% block extra_meta %}
+    <meta name="description" content="Verify your Island Bees account email.">
+{% endblock %}
 
 {% block inner_content %}
 <h1 class="font-title weight-bold section-title-lrg text-uppercase mb-2">{% trans "Verify Your E-mail Address" %}</h1>
