--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -4,7 +4,12 @@
 {% load account socialaccount %}
 {% load widget_tweaks %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% block extra_title %}- {% trans "Sign In" %}{% endblock %}
+
+{% block extra_meta %}
+    <meta name="description" content="Log in to your Island Bees account.">
+{% endblock %}
+
 
 {% block inner_content %}
 
