--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -2,7 +2,11 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Sign Out" %}{% endblock %}
+{% block extra_title %}{% trans "Sign Out" %}{% endblock %}
+
+{% block extra_meta %}
+    <meta name="description" content="Confirm sign out?">
+{% endblock %}
 
 {% block inner_content %}
 
