--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -4,7 +4,11 @@
 {% load account %}
 {% load widget_tweaks %}
 
-{% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% block extra_title %}{% trans "Password Reset" %}{% endblock %}
+
+{% block extra_meta %}
+    <meta name="description" content="Reset your Island Bees account password.">
+{% endblock %}
 
 {% block inner_content %}
 
