fix: change autofocus on signin form to top input

--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -25,9 +25,9 @@
   {% csrf_token %}
 
   <!-- Form Inputs -->
-  {{ form.email|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:Email"|attr:"autocomplete:email" }}
+  {{ form.email|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:Email"|attr:"autocomplete:email"|attr:"autofocus" }}
   {{ form.email2|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:Repeat Email"|attr:"autocomplete:email" }}
-  {{ form.username|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:Username"|attr:"autocomplete:username" }}
+  {{ form.username|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:Username"|attr:"autocomplete:username"|remove_attr:"autofocus" }}
   {{ form.password1|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:Password"|attr:"autocomplete:new-password" }}
   {{ form.password2|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:Repeat Password"|attr:"autocomplete:new-password" }}
 
