--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -26,6 +26,9 @@
         {% csrf_token %}
         <!-- Form Inputs -->
         {{ form.email|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:Email"|attr:"autocomplete:email" }}
+        {% for error in form.email.errors  %}
+            <span class="text-ib-warning weight-semibold d-block mb-1">{{error}}</span>
+        {% endfor %}
 
         <div class="button-group mt-4 d-flex justify-content-end">
             <!-- Home Button -->
