--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -25,6 +25,9 @@
 
         <!-- Form Inputs -->
         {{ form.password|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:New Password"|attr:"autocomplete:new-password" }}
+        {% for error in form.password.errors  %}
+            <span class="text-ib-warning weight-semibold d-block mb-1">{{error}}</span>
+        {% endfor %}
 
         <div class="button-group mt-4 d-flex justify-content-end">
             <!-- Home Button -->
