--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -25,9 +25,17 @@
 
         <!-- Form Inputs -->
         {{ form.oldpassword|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:Old Password"|attr:"autocomplete:password" }}
+        {% for error in form.oldpassword.errors  %}
+            <span class="text-ib-warning weight-semibold d-block mb-1">{{error}}</span>
+        {% endfor %}
         {{ form.password1|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:New Password"|attr:"autocomplete:new-password" }}
+        {% for error in form.password1.errors  %}
+            <span class="text-ib-warning weight-semibold d-block mb-1">{{error}}</span>
+        {% endfor %}
         {{ form.password2|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey"|attr:"aria-label:Repeat New Password"|attr:"autocomplete:new-password" }}
-
+        {% for error in form.password2.errors  %}
+            <span class="text-ib-warning weight-semibold d-block mb-1">{{error}}</span>
+        {% endfor %}
     
         <div class="button-group mt-4 d-flex justify-content-end">
             <!-- Home Button -->
