--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -36,6 +36,12 @@
         {% for error in form.password2.errors  %}
             <span class="text-ib-warning weight-semibold d-block mb-1">{{error}}</span>
         {% endfor %}
+
+        {% if form.errors %}
+            {% for error in form.non_field_errors %}
+                <span class="text-ib-warning weight-semibold d-block mb-1">{{error}}</span>
+            {% endfor %}
+        {% endif %}
     
         <div class="button-group mt-4 d-flex justify-content-end">
             <!-- Home Button -->
