feat: make reviews readonly on admin panel

--- a/manage/templates/manage/manage.html
+++ b/manage/templates/manage/manage.html
@@ -139,7 +139,7 @@
 
                     <!-- Reviews Title & Intro Text -->
                     <h2 class="subtitle weight-semibold text-ib-dark mb-0 me-2 me-sm-0 mb-sm-1">UNAPPROVED REVIEWS</h2>
-                    <p class="small weight-regular text-ib-dark">The following reviews are unapproved. Once approved they will appear on the site.</p>
+                    <p class="small weight-regular text-ib-dark">The following reviews are unapproved. Once approved they will appear on the site. You can also change a review's approved status using the admin panel.</p>
 
                 </div>
             </div>
