--- a/reviews/templates/reviews/edit_review.html
+++ b/reviews/templates/reviews/edit_review.html
@@ -55,7 +55,7 @@
                     <a class="ib-button ib-button-grey me-3 text-decoration-none text-dark-grey font-title weight-bold shadow-sm" href="{{ request.GET.next }}">CANCEL</a>
                     
                     <!-- Submit Button -->
-                    <button class="ib-button ib-button-yellow text-dark-grey font-title weight-bold shadow-sm" type="submit">UDPATE</button>
+                    <button class="ib-button ib-button-yellow text-dark-grey font-title weight-bold shadow-sm" type="submit">UPDATE</button>
                 </div>
             </form>
         </div>
