--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,7 +37,7 @@ html {
     --blue-hov: #005163;
     --blue-light: #BCE1E9;
     --blue-light-hov: #92d7e6;
-    --warning: rgb(164, 63, 95);
+    --warning: #a43f5f;
     --warning-hov: #6b102d;
     --warning-light: #e9c2cf;
     --warning-light-hov: #e59bb4;
