fix: add footer padding to avoid btt button hiding links

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -969,6 +969,10 @@ label[for="id_price"] {
         text-decoration-color: rgba(255, 254, 251, 1);
 }
 
+#footer-padding {
+    height: 60px;
+}
+
 
 /* Toasts */
 
