--- a/templates/base.html
+++ b/templates/base.html
@@ -246,7 +246,7 @@
             <div class="container-fluid bg-ib-dark d-flex font-body text-ib-light px-4 py-3">
                 <div class="row w-100 ib-row">
                     <p class="weight-light col-12 col-lg-9 col-xl-8 text-center lower-footer-text mb-2 mb-lg-0">ISLAND BEES IS A FULL STACK DJANGO E-COMMERCE SITE BUILT FOR EDUCATIONAL PURPOSES ONLY</p>
-                    <div class="col-12 col-lg-3 col-xl-4 text-center" id="lower-footer-links">
+                    <div class="col-12 col-lg-3 col-xl-4 text-center px-0" id="lower-footer-links">
                         <p class="weight-semibold d-inline me-2 lower-footer-text mb-2 mb-lg-0">© EMMA HEWSON</p>
                         <div class="d-inline">
                             <a class="text-decoration-none text-ib-light me-2" href="https://www.linkedin.com/in/emmajmhewson/" target="_blank" aria-label="Linked In - Opens in a new tab">
@@ -262,6 +262,7 @@
                     </div>
                 </div>
             </div>
+            <div id="footer-padding" class="bg-ib-dark"></div>
         </footer>
 
         <!-- Postload JavaScript -->
