feat: add clickable phone number to contact us page

--- a/manage/templates/manage/contact_us.html
+++ b/manage/templates/manage/contact_us.html
@@ -57,7 +57,10 @@
                     <span class="ib-lh-1 rating-hex-small rating-hex-true">&#x2B22;</span>
                 </div>
                 <div>
-                    <p class="weight-semibold">12345 678 910</p>
+                    <a class="text-dark-grey weight-semibold" href="tel:12345678910">
+                        <p class="weight-semibold">12345 678 910</p>
+                    </a>
+                    
                 </div>
             </div>
             <div class="d-flex">
