--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -44,9 +44,10 @@
         {% endif %}
     
         <div class="button-group mt-4 d-flex justify-content-end">
-            <!-- Home Button -->
-            <a href="{% url 'view_bag' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
-              <p class="d-inline">HOME</p>
+            <!-- Back To Profile -->
+            <a href="{% url 'profile' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
+                <i class="fas fa-chevron-left d-inline me-1"></i>
+                <p class="d-inline">BACK TO PROFILE</p>
             </a>
             <!-- Submit Button -->
             <button name="action" class="ib-button ib-button-yellow text-decoration-none text-ib-dark font-title weight-bold shadow-sm text-uppercase float-end ms-3" type="submit" value="{% trans 'Change Password' %}">{% trans "Submit" %}</button>
