feat: add links to home page categories

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -145,19 +145,19 @@
                     <p class="mb-3">THE BEES</p>
                 </div>
             </a>
-            <a class="text-decoration-none m-1" href="{% url 'products' %}?category=the_bees">
+            <a class="text-decoration-none m-1" href="{% url 'products' %}?category=the_kit">
                 <div class="bg-dark-grey category-button text-yellow d-flex flex-wrap align-items-center justify-content-center">
                     <i class="fas fa-box w-100 mt-3"></i>
                     <p class="mb-3">THE KIT</p>
                 </div>
             </a>
-            <a class="text-decoration-none m-1" href="{% url 'products' %}?category=the_bees">
+            <a class="text-decoration-none m-1" href="{% url 'products' %}?category=courses">
                 <div class="bg-dark-grey category-button text-yellow d-flex flex-wrap align-items-center justify-content-center">
                     <i class="fas fa-graduation-cap w-100 mt-3"></i>
                     <p class="mb-3">COURSES</p>
                 </div>
             </a>
-            <a class="text-decoration-none m-1" href="{% url 'products' %}?category=the_bees">
+            <a class="text-decoration-none m-1" href="{% url 'products' %}?category=produce">
                 <div class="bg-dark-grey category-button text-yellow d-flex flex-wrap align-items-center justify-content-center">
                     <i class="fas fa-jar w-100 mt-3"></i>
                     <p class="mb-3">PRODUCE</p>
