--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -45,7 +45,7 @@
       {% endfor %}
 
       <div class="buttonHolder mt-4 mb-3">
-        <button class="secondaryAction ib-button-blue ib-button-sm text-ib-light shadow-sm me-3" type="submit"
+        <button class="secondaryAction ib-button-blue ib-button-sm text-ib-light shadow-sm me-3 mb-3 mb-sm-0" type="submit"
           name="action_primary">{% trans 'Make Primary' %}</button>
         <button class="secondaryAction ib-button-success ib-button-sm text-ib-dark shadow-sm me-3" type="submit"
           name="action_send">{% trans 'Re-send Verification' %}</button>
