--- a/static/css/style.css
+++ b/static/css/style.css
@@ -521,6 +521,8 @@ select.ib-form-field {
     width: 100%;
     font-size: 16px;
     box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.50) inset;
+    appearance: none;
+    -webkit-appearance: none;
     border-radius: 2px;
     transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
