--- a/static/css/style.css
+++ b/static/css/style.css
@@ -524,6 +524,7 @@ select.ib-form-field {
     appearance: none;
     -webkit-appearance: none;
     border-radius: 2px;
+    background-color: white;
     transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     -webkit-transition: all .2s ease-in-out;
