--- a/static/css/style.css
+++ b/static/css/style.css
@@ -521,8 +521,10 @@ select.ib-form-field {
     width: 100%;
     font-size: 16px;
     box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.50) inset;
-    appearance: none;
-    -webkit-appearance: none;
+    appearance: initial;
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    -o-appearance: none !important;
     border-radius: 2px;
     background-color: white;
     transition: all .2s ease-in-out;
