--- a/static/css/style.css
+++ b/static/css/style.css
@@ -525,8 +525,9 @@ select.ib-form-field {
     -webkit-appearance: none !important;
     -moz-appearance: none !important;
     -o-appearance: none !important;
+    -webkit-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.50) inset;
     border-radius: 2px;
-    background-color: white;
+    background-color: white !important;
     transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     -webkit-transition: all .2s ease-in-out;
